k8s/test/services.yml
apiVersion: v1
kind: Service
metadata:
  name: real-app
  namespace: real-app-test
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: real-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
